# YoutubeMusicPython

./: README.md  pyproject.toml
.github/workflows/: ci.yml
