[build-system]
requires = ["hatchling", "aiohttp"]
build-backend = "hatchling.build"

[project]
name = "youtube_music_wrapper_api"
version = "0.0.1"
authors = [
  { name="Zerwin" },
]
description = "A Python Library for Home Assistant for the Youtube Music Wrapper API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]